// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should have only the initial stub segment when setupFlowRefresh is enabled (no active segments yet) 1`] = `
<div>
  <header
    class="googlesitekit-header"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-header__logo mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone"
        >
          <a
            aria-label="Go to dashboard"
            class="googlesitekit-cta-link googlesitekit-header__logo-link"
            href="http://example.com/wp-admin/admin.php?page=googlesitekit-dashboard"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              <div
                aria-hidden="true"
                class="googlesitekit-logo"
              >
                <svg />
                <svg />
                <span
                  class="screen-reader-text"
                >
                  Site Kit by Google Logo
                </span>
              </div>
            </span>
          </a>
        </div>
        <div
          class="googlesitekit-header__children mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone"
        >
          <button
            class="mdc-button mdc-button--tertiary"
            target="_self"
          >
            <span
              class="mdc-button__label"
            >
              Exit setup
            </span>
          </button>
          <div
            class="googlesitekit-user-selector googlesitekit-dropdown-menu googlesitekit-dropdown-menu__icon-menu mdc-menu-surface--anchor"
          >
            <button
              aria-controls="user-menu"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Account"
              class="mdc-button googlesitekit-header__dropdown mdc-button--dropdown googlesitekit-border-radius-round--tablet googlesitekit-border-radius-round--phone googlesitekit-border-radius-round googlesitekit-button-icon"
              target="_self"
            >
              <i
                aria-hidden="true"
                class="mdc-button__icon mdc-button__account"
              >
                <img
                  alt="User Avatar"
                  class="mdc-button__icon--image"
                  src="https://wapu.us/wp-content/uploads/2017/11/WapuuFinal-100x138.png"
                />
              </i>
            </button>
            <div
              class="mdc-menu mdc-menu-surface googlesitekit-user-menu"
            >
              <ul
                aria-hidden="true"
                aria-orientation="vertical"
                class="mdc-list"
                id="user-menu"
                role="menu"
                tabindex="-1"
              >
                <li>
                  <div
                    aria-label="Google account"
                    class="googlesitekit-user-menu__details"
                  >
                    <img
                      alt=""
                      class="googlesitekit-user-menu__details-avatar"
                      src="https://wapu.us/wp-content/uploads/2017/11/WapuuFinal-100x138.png"
                    />
                    <div
                      class="googlesitekit-user-menu__details-info"
                    >
                      <p
                        class="googlesitekit-user-menu__details-info__name"
                      >
                        Wapuu WordPress PhD
                      </p>
                      <p
                        aria-label="Email"
                        class="googlesitekit-user-menu__details-info__email"
                      >
                        wapuu.wordpress@gmail.com
                      </p>
                    </div>
                  </div>
                </li>
                <li
                  class="mdc-list-item"
                  id="manage-sites"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="googlesitekit-user-menu__item"
                  >
                    <div
                      class="googlesitekit-user-menu__item-icon"
                    >
                      <svg />
                    </div>
                    <span
                      class="googlesitekit-user-menu__item-label"
                    >
                      Manage Sites
                    </span>
                  </div>
                </li>
                <li
                  class="mdc-list-item"
                  id="disconnect"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="googlesitekit-user-menu__item"
                  >
                    <div
                      class="googlesitekit-user-menu__item-icon"
                    >
                      <svg />
                    </div>
                    <span
                      class="googlesitekit-user-menu__item-label"
                    >
                      Disconnect
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <div
    class="googlesitekit-subheader"
  >
    <div
      class="googlesitekit-progress-indicator"
      style="grid-template-columns: 46px repeat(1, 1fr);"
    >
      <div
        class="googlesitekit-progress-indicator__segment"
      />
    </div>
  </div>
</div>
`;

exports[`Header should not render the progress indicator in the header when setupFlowRefresh is disabled 1`] = `
<div>
  <header
    class="googlesitekit-header"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-header__logo mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone"
        >
          <a
            aria-label="Go to dashboard"
            class="googlesitekit-cta-link googlesitekit-header__logo-link"
            href="http://example.com/wp-admin/admin.php?page=googlesitekit-dashboard"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              <div
                aria-hidden="true"
                class="googlesitekit-logo"
              >
                <svg />
                <svg />
                <span
                  class="screen-reader-text"
                >
                  Site Kit by Google Logo
                </span>
              </div>
            </span>
          </a>
        </div>
        <div
          class="googlesitekit-header__children mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone"
        >
          <div
            class="googlesitekit-dropdown-menu googlesitekit-dropdown-menu__icon-menu mdc-menu-surface--anchor"
          >
            <button
              aria-controls="googlesitekit-help-menu"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Help"
              class="mdc-button googlesitekit-header__dropdown googlesitekit-border-radius-round googlesitekit-button-icon googlesitekit-help-menu__button mdc-button--dropdown"
              target="_self"
              title="Help"
            >
              <svg />
            </button>
            <div
              class="mdc-menu mdc-menu-surface googlesitekit-width-auto"
            >
              <ul
                aria-hidden="true"
                aria-orientation="vertical"
                class="mdc-list"
                id="googlesitekit-help-menu"
                role="menu"
                tabindex="-1"
              >
                <li
                  class="googlesitekit-help-menu-link mdc-list-item"
                  role="none"
                  tabindex="-1"
                >
                  <a
                    aria-label="Fix common issues (opens in a new tab)"
                    class="googlesitekit-cta-link mdc-list-item__text"
                    href="https://sitekit.withgoogle.com/support/?doc=fix-common-issues"
                    rel="noopener noreferrer"
                    role="menuitem"
                    tabindex="-1"
                    target="_blank"
                  >
                    <span
                      class="googlesitekit-cta-link__contents"
                    >
                      Fix common issues
                    </span>
                  </a>
                </li>
                <li
                  class="googlesitekit-help-menu-link mdc-list-item"
                  role="none"
                  tabindex="-1"
                >
                  <a
                    aria-label="Read help docs (opens in a new tab)"
                    class="googlesitekit-cta-link mdc-list-item__text"
                    href="https://sitekit.withgoogle.com/documentation/"
                    rel="noopener noreferrer"
                    role="menuitem"
                    tabindex="-1"
                    target="_blank"
                  >
                    <span
                      class="googlesitekit-cta-link__contents"
                    >
                      Read help docs
                    </span>
                  </a>
                </li>
                <li
                  class="googlesitekit-help-menu-link mdc-list-item"
                  role="none"
                  tabindex="-1"
                >
                  <a
                    aria-label="Get support (opens in a new tab)"
                    class="googlesitekit-cta-link mdc-list-item__text"
                    href="https://wordpress.org/support/plugin/google-site-kit/"
                    rel="noopener noreferrer"
                    role="menuitem"
                    tabindex="-1"
                    target="_blank"
                  >
                    <span
                      class="googlesitekit-cta-link__contents"
                    >
                      Get support
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="googlesitekit-user-selector googlesitekit-dropdown-menu googlesitekit-dropdown-menu__icon-menu mdc-menu-surface--anchor"
          >
            <button
              aria-controls="user-menu"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Account"
              class="mdc-button googlesitekit-header__dropdown mdc-button--dropdown googlesitekit-border-radius-round--tablet googlesitekit-border-radius-round--phone googlesitekit-border-radius-round googlesitekit-button-icon"
              target="_self"
            >
              <i
                aria-hidden="true"
                class="mdc-button__icon mdc-button__account"
              >
                <img
                  alt="User Avatar"
                  class="mdc-button__icon--image"
                  src="https://wapu.us/wp-content/uploads/2017/11/WapuuFinal-100x138.png"
                />
              </i>
            </button>
            <div
              class="mdc-menu mdc-menu-surface googlesitekit-user-menu"
            >
              <ul
                aria-hidden="true"
                aria-orientation="vertical"
                class="mdc-list"
                id="user-menu"
                role="menu"
                tabindex="-1"
              >
                <li>
                  <div
                    aria-label="Google account"
                    class="googlesitekit-user-menu__details"
                  >
                    <img
                      alt=""
                      class="googlesitekit-user-menu__details-avatar"
                      src="https://wapu.us/wp-content/uploads/2017/11/WapuuFinal-100x138.png"
                    />
                    <div
                      class="googlesitekit-user-menu__details-info"
                    >
                      <p
                        class="googlesitekit-user-menu__details-info__name"
                      >
                        Wapuu WordPress PhD
                      </p>
                      <p
                        aria-label="Email"
                        class="googlesitekit-user-menu__details-info__email"
                      >
                        wapuu.wordpress@gmail.com
                      </p>
                    </div>
                  </div>
                </li>
                <li
                  class="mdc-list-item"
                  id="manage-sites"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="googlesitekit-user-menu__item"
                  >
                    <div
                      class="googlesitekit-user-menu__item-icon"
                    >
                      <svg />
                    </div>
                    <span
                      class="googlesitekit-user-menu__item-label"
                    >
                      Manage Sites
                    </span>
                  </div>
                </li>
                <li
                  class="mdc-list-item"
                  id="disconnect"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="googlesitekit-user-menu__item"
                  >
                    <div
                      class="googlesitekit-user-menu__item-icon"
                    >
                      <svg />
                    </div>
                    <span
                      class="googlesitekit-user-menu__item-label"
                    >
                      Disconnect
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <div
    class="googlesitekit-subheader"
  />
</div>
`;

exports[`Header should render the progress indicator in the header when setupFlowRefresh is enabled 1`] = `
<div>
  <header
    class="googlesitekit-header"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-header__logo mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone"
        >
          <a
            aria-label="Go to dashboard"
            class="googlesitekit-cta-link googlesitekit-header__logo-link"
            href="http://example.com/wp-admin/admin.php?page=googlesitekit-dashboard"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              <div
                aria-hidden="true"
                class="googlesitekit-logo"
              >
                <svg />
                <svg />
                <span
                  class="screen-reader-text"
                >
                  Site Kit by Google Logo
                </span>
              </div>
            </span>
          </a>
        </div>
        <div
          class="googlesitekit-header__children mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone"
        >
          <button
            class="mdc-button mdc-button--tertiary"
            target="_self"
          >
            <span
              class="mdc-button__label"
            >
              Exit setup
            </span>
          </button>
          <div
            class="googlesitekit-user-selector googlesitekit-dropdown-menu googlesitekit-dropdown-menu__icon-menu mdc-menu-surface--anchor"
          >
            <button
              aria-controls="user-menu"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Account"
              class="mdc-button googlesitekit-header__dropdown mdc-button--dropdown googlesitekit-border-radius-round--tablet googlesitekit-border-radius-round--phone googlesitekit-border-radius-round googlesitekit-button-icon"
              target="_self"
            >
              <i
                aria-hidden="true"
                class="mdc-button__icon mdc-button__account"
              >
                <img
                  alt="User Avatar"
                  class="mdc-button__icon--image"
                  src="https://wapu.us/wp-content/uploads/2017/11/WapuuFinal-100x138.png"
                />
              </i>
            </button>
            <div
              class="mdc-menu mdc-menu-surface googlesitekit-user-menu"
            >
              <ul
                aria-hidden="true"
                aria-orientation="vertical"
                class="mdc-list"
                id="user-menu"
                role="menu"
                tabindex="-1"
              >
                <li>
                  <div
                    aria-label="Google account"
                    class="googlesitekit-user-menu__details"
                  >
                    <img
                      alt=""
                      class="googlesitekit-user-menu__details-avatar"
                      src="https://wapu.us/wp-content/uploads/2017/11/WapuuFinal-100x138.png"
                    />
                    <div
                      class="googlesitekit-user-menu__details-info"
                    >
                      <p
                        class="googlesitekit-user-menu__details-info__name"
                      >
                        Wapuu WordPress PhD
                      </p>
                      <p
                        aria-label="Email"
                        class="googlesitekit-user-menu__details-info__email"
                      >
                        wapuu.wordpress@gmail.com
                      </p>
                    </div>
                  </div>
                </li>
                <li
                  class="mdc-list-item"
                  id="manage-sites"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="googlesitekit-user-menu__item"
                  >
                    <div
                      class="googlesitekit-user-menu__item-icon"
                    >
                      <svg />
                    </div>
                    <span
                      class="googlesitekit-user-menu__item-label"
                    >
                      Manage Sites
                    </span>
                  </div>
                </li>
                <li
                  class="mdc-list-item"
                  id="disconnect"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="googlesitekit-user-menu__item"
                  >
                    <div
                      class="googlesitekit-user-menu__item-icon"
                    >
                      <svg />
                    </div>
                    <span
                      class="googlesitekit-user-menu__item-label"
                    >
                      Disconnect
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <div
    class="googlesitekit-subheader"
  >
    <div
      class="googlesitekit-progress-indicator"
      style="grid-template-columns: 46px repeat(1, 1fr);"
    >
      <div
        class="googlesitekit-progress-indicator__segment"
      />
    </div>
  </div>
</div>
`;
